# OpenSteamTool-local

./: .gitignore  README.md  opensteamtool.example.toml
.github/workflows/: ci.yml
src/Hook/: Hooks_NetPacket.cpp
src/Utils/Config/: Config.cpp  Config.h
src/Utils/SteamMetadata/: ManifestClient.cpp  RemoteToml.cpp
tools/metadata_generator/: README.md  generate.py
tools/pattern_scanner/: Cargo.toml  README.md
tools/pattern_scanner/src/: main.rs
tools/steam-fixer/: Cargo.toml
tools/steam-fixer/src/: main.rs
