[package]
name = "steam-fixer"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
dirs = "5.0"
anyhow = "1.0"
futures = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
